directories reorganized, CMakeLists modified

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,8 +19,11 @@ include_directories(${GLFW_INCLUDE_DIRS})
 link_directories(${GLFW_LIBRARY_DIRS})
 add_definitions(${GLFW_DEFINITIONS})
 
+include_directories(${White_SOURCE_DIR}/inc)
+include_directories(${White_SOURCE_DIR}/Input/inc)
 include_directories(${White_SOURCE_DIR}/WMath/inc)
+include_directories(${White_SOURCE_DIR}/Renderer/inc)
 
-add_executable(White main.cpp ApplicationHelper.cpp)
+add_executable(White main.cpp src/ApplicationHelper.cpp src/White.cpp)
 
 target_link_libraries(White ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${GLFW_LIBRARY} Input WMath Renderer)
