--- a/WMath/src/CMakeLists.txt
+++ b/WMath/src/CMakeLists.txt
@@ -1,3 +1,3 @@
+project(WMath)
 include_directories(${White_SOURCE_DIR}/WMath/inc)
 add_library(WMath mat4.cpp vec3.cpp)
-target_link_libraries(WMath Renderer)
