--- a/WMath/src/CMakeLists.txt
+++ b/WMath/src/CMakeLists.txt
@@ -1,3 +1,22 @@
 project(WMath)
 include_directories(${White_SOURCE_DIR}/WMath/inc)
-add_library(WMath mat4.cpp vec4.cpp vec3.cpp)
+
+SET(
+  WMath_SRCs
+  mat4.cpp
+  vec4.cpp
+  vec3.cpp
+)
+
+SET( WMath_Hs_DIR ../inc/WMath )
+
+SET(
+  WMath_Hs
+  WMath.h
+)
+
+FOREACH(WMath_H ${WMath_Hs})
+  LIST(APPEND WMath_Hs_PATHs "${WMath_Hs_DIR}/${WMath_H}")
+ENDFOREACH()
+
+add_library(WMath ${WMath_SRCs} ${WMath_Hs_PATHs})
