fixed directories structure and OpenGL files

--- a/Renderer/src/CMakeLists.txt
+++ b/Renderer/src/CMakeLists.txt
@@ -15,19 +15,29 @@ include_directories(${GLFW_INCLUDE_DIRS})
 link_directories(${GLFW_LIBRARY_DIRS})
 add_definitions(${GLFW_DEFINITIONS})
 
-include_directories(${White_SOURCE_DIR}/WMath/inc/${White_SOURCE_DIR}/Renderer/inc)
+include_directories(${White_SOURCE_DIR}/WMath/inc/ ${White_SOURCE_DIR}/Renderer/inc)
+
+SET(
+  OpenGL_SRCs
+  OpenGL/Model.cpp 
+  OpenGL/Shader.cpp
+)
+
+SET(
+  OpenGL_Hs
+  OpenGL/Model.h
+  OpenGL/Shader.h
+)
 
 SET(
   Renderer_SRCs
   Renderer.cpp
-  ShaderFactory.cpp
-  ShaderGLSL.cpp
-  OpenGL/Model.cpp 
   ModelHelper.cpp
   Camera.cpp
   Scene.cpp
   Window.cpp
   GLFWhelper.cpp
+  ${OpenGL_SRCs}
 )
 
 SET( Renderer_Hs_DIR ../inc/Renderer )
@@ -38,14 +48,16 @@ SET(
   GLFWhelper.h
   Model.h
   ModelHelper.h
-  OpenGL/Model.h
   Renderer.h
   Scene.h
   Shader.h
-  ShaderFactory.h
-  ShaderGLSL.h
   Window.h
+  ${OpenGL_Hs}
 )
+
+FOREACH(OpenGL_H ${OpenGL_Hs})
+  LIST(APPEND OpenGL_Hs_PATHs "${Renderer_Hs_DIR}/${OpenGL_H}")
+ENDFOREACH() 
 
 FOREACH(Renderer_H ${Renderer_Hs})
   LIST(APPEND Renderer_Hs_PATHs "${Renderer_Hs_DIR}/${Renderer_H}")
@@ -54,3 +66,6 @@ ENDFOREACH()
 add_library( Renderer ${Renderer_SRCs} ${Renderer_Hs_PATHs} )
 
 target_link_libraries(Renderer ${OPENGL_LIBRARIES} ${GLEW_LIBRARY} ${GLFW_LIBRARY} WMath)
+
+source_group("Source Files\\OpenGL" FILES ${OpenGL_SRCs})
+source_group("Header Files\\OpenGL" FILES ${OpenGL_Hs_PATHs})
