Physics Library initialized

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,11 +5,11 @@ project(White)
 
 add_definitions(-DOPENGL)
 
-subdirs(WMath Input Renderer tinyxml2)
+subdirs(WMath Input Renderer Physics tinyxml2)
 
 include_directories( ${White_SOURCE_DIR} ${White_SOURCE_DIR}/inc
   ${White_SOURCE_DIR}/Input/inc ${White_SOURCE_DIR}/WMath/inc
-  ${White_SOURCE_DIR}/Renderer/inc ${White_SOURCE_DIR}/bullet3-master/src )
+  ${White_SOURCE_DIR}/Renderer/inc ${White_SOURCE_DIR}/Physics/inc )
 
 SET( SRCs_DIR src )
 
@@ -49,25 +49,6 @@ add_executable(White main.cpp ${SRCs_PATHs} ${Hs_PATHs})
 source_group("Source Files\\Helpers" FILES ${Helpers_SRCs})
 source_group("Header Files\\Helpers" FILES ${Helpers_Hs})
 
-find_library(BULLET_DYNAMICS_LIBRARY
-    NAMES BulletDynamics
-    HINTS "${White_SOURCE_DIR}/bullet3-master/build/lib/Release"
-	REQUIRED
-)
-
-find_library(BULLET_COLLISION_LIBRARY
-    NAMES BulletCollision
-    HINTS "${White_SOURCE_DIR}/bullet3-master/build/lib/Release"
-	REQUIRED
-)
-
-find_library(LINEAR_MATH_LIBRARY
-    NAMES LinearMath
-    HINTS "${White_SOURCE_DIR}/bullet3-master/build/lib/Release"
-	REQUIRED
-)
-
-target_link_libraries( White tinyxml2 Input WMath Renderer
-  ${BULLET_DYNAMICS_LIBRARY} ${BULLET_COLLISION_LIBRARY} ${LINEAR_MATH_LIBRARY} )
+target_link_libraries( White tinyxml2 Input WMath Renderer Physics )
 
 file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/assets DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
